"Update to the latest Java version"