@@ -31,5 +31,5 @@ start /B hfs.exe client
 @pause
 
 ::Run the client app
-java -Djava.rmi.server.codebase=http://%HTTPserverIP%:%HTTPserverPort%/ -Djava.security.policy=java.policy -Djava.rmi.server.useCodebaseOnly=false %LOG% client.ComputePi %RMIregistryIP% 10
+java -Djava.rmi.server.codebase=http://%HTTPserverIP%:%HTTPserverPort%/ -Djava.security.policy=java.policy -Djava.security.manager=allow -Djava.rmi.server.useCodebaseOnly=false %LOG% client.ComputePi %RMIregistryIP% 10
 
